--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html{
 }
 body{
 	font-family: 'Robotto' sans-serif;
+	font-size: 25px;
 	margin: 0;
 	padding: 0;
 	min-height: 100vh;
@@ -19,18 +20,14 @@ body{
 	align-items: center;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 25px;
 	width: 800px;
-	height: 600px;
+	height: 700px;
 	box-shadow: 0 0 15px 2px black;
 	background-color: skyblue;
 }
-img, h1{
-	width: 500px;
-	height: 300px;
-	margin-left: auto;
-	margin-right: auto;
-}
 input, select{
+	font-size: 20px;
 	padding: 10px;
 	margin: 5px;
 	width: 300px;
@@ -41,7 +38,7 @@ input, select{
 
 }
 button{
-	padding: 10px;
+	padding: 15px;
 	margin: 5px;
 	color: white;
 	background-color: cadetblue;
@@ -52,4 +49,20 @@ button{
 }
 button:hover{
 	background-color: darkblue;
+}
+h1{
+	text-align: center;
+	font-style: italic;
+	m0
+}
+img{
+	width: 600px;
+	height: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	box-shadow: 0 0 15px 2px black;
+	border-radius: 10px;
+}
+#divElement{
+	text-align: center;
 }
