--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ input, select{
 	margin: 5px;
 	width: 300px;
 	border: none;
+	outline: none;
 	border: 1px solid seagreen;
 	box-shadow: 0 0 15px 1px black;
 	border-radius: 50px;
